--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,10 +1,12 @@
-{% extends "base.html" %}
-
+{% extends 'base.html' %}
 {% block content %}
-  <h2>ثبت نام</h2>
-  <form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">ثبت نام</button>
-  </form>
+<div class="container col-md-6 col-lg-4" style="direction: rtl;">
+    <h2 class="text-center my-4">ثبت‌نام دانشجو</h2>
+    <form method="post" class="card p-4 shadow">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-primary w-100">ثبت‌نام</button>
+    </form>
+    <p class="mt-3 text-center">قبلاً ثبت‌نام کرده‌اید؟ <a href="{% url 'login' %}">وارد شوید</a></p>
+</div>
 {% endblock %}
