--- a/users/templates/panel_base.html
+++ b/users/templates/panel_base.html
@@ -62,8 +62,9 @@
                 <h3 class="text-center mt-4 mb-3">پنل مدیریت</h3>
                 {% if user.is_student %}
                     <!-- سایدبار مخصوص دانشجو -->
-                    <a class="nav-link" href="{% url 'student_dashboard' %}">داشبرد</a>
-                    <a class="nav-link" href="{% url 'student_courses' %}">دوره‌های من</a>
+                    <a class="nav-link" href="{% url 'student_dashboard' %}">داشبورد</a>
+                    <a class="nav-link" href="{% url 'student_courses' %}">دوره‌های ثبت نام شده</a>
+                    <a class="nav-link" href="{% url 'available_courses' %}">دوره‌های موجود</a>
                     <a class="nav-link" href="{% url 'student_grades' %}">نمرات من</a>
 
                 {% elif user.is_professor %}
@@ -82,6 +83,7 @@
             {% endblock %}
         </div>
     </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
